--- a/153.Find Minimum in Rotated Sorted Array.md
+++ b/153.Find Minimum in Rotated Sorted Array.md
@@ -14,3 +14,20 @@ public class Solution {
     }
 }
 ```
+
+
+Work Solution -- Binary Search
+```java
+public class Solution {
+    public int findMin(int[] nums) {
+        int lo = 0, hi = nums.length - 1;
+        while (lo < hi) {
+            int mid = lo + (hi - lo) /2;
+            if (nums[mid] > nums[hi]){
+                lo = mid + 1;
+            } else hi = mid;
+        }
+        return nums[lo];
+    }
+}
+```
