Update 153.Find Minimum in Rotated Sorted Array.md

--- a/153.Find Minimum in Rotated Sorted Array.md
+++ b/153.Find Minimum in Rotated Sorted Array.md
@@ -1,5 +1,4 @@
 # Find Minimum in Rotated Sorted Array
-
 Brute Force Solution
 ```java
 public class Solution {
@@ -17,8 +16,8 @@ public class Solution {
 ```
 
 
-Work Solution -- Binary Search
 
+Work Solution -- Binary Search
 ```java
 public class Solution {
     public int findMin(int[] nums) {
@@ -38,6 +37,7 @@ public class Solution {
 }
 ```
 
+Advanced Bianry Search
 ```java
 public class Solution {
     public int findMin(int[] nums) {
