Update 033.Search in Rotated Sorted Array.md

--- a/033.Search in Rotated Sorted Array.md
+++ b/033.Search in Rotated Sorted Array.md
@@ -1,5 +1,6 @@
 # Search in Rotated Sorted Array
 
+Brute Force Solution _ Time complexity = n
 ```java
 public class Solution {
     public int search(int[] nums, int target) {
@@ -20,6 +21,41 @@ public class Solution {
 }
 ```
 
-Time complexity = n
-
-There is another algorithm that time complexity is lgn.. 
+Work Solution _ Time complexity = lgn 
+```java
+public class Solution {
+    public int search(int[] nums, int target) {
+        if (nums.length == 0) return -1;
+        int lo = 0;
+        int hi = nums.length - 1;
+        while (lo < hi){
+            int mid = lo + (hi - lo) / 2;
+            if (nums[lo] <= nums[mid] && nums[lo] > nums[hi]) {
+                if (target >= nums[lo] && target <= nums[mid]) {
+                    hi = mid;
+                }
+                else {
+                    lo = mid + 1;
+                }
+            }
+            else if (nums[lo] > nums[mid] && nums[lo] > nums[hi]) {
+                if (target <= nums[hi] && target > nums[mid]) {
+                    lo = mid + 1;
+                }
+                else {
+                    hi = mid;
+                }
+            }
+            else {
+                if (target >= nums[lo] && target <= nums[mid]) {
+                    hi = mid;
+                }
+                else {
+                    lo = mid + 1;
+                }
+            }
+        }
+        return nums[lo] == target ? lo : -1;
+    }
+}
+```
