--- a/033.Search in Rotated Sorted Array.md
+++ b/033.Search in Rotated Sorted Array.md
@@ -30,16 +30,16 @@ public class Solution {
         int hi = nums.length - 1;
         while (lo < hi){
             int mid = lo + (hi - lo) / 2;
-            if (nums[lo] <= nums[mid] && nums[lo] > nums[hi]) {
-                if (target >= nums[lo] && target <= nums[mid]) {
-                    hi = mid;
+            if (nums[lo] <= nums[mid] && nums[lo] > nums[hi]) { //Attention for "="
+                if (target >= nums[lo] && target <= nums[mid]) {
+                    hi = mid;
                 }
                 else {
                     lo = mid + 1;
                 }
             }
             else if (nums[lo] > nums[mid] && nums[lo] > nums[hi]) {
-                if (target <= nums[hi] && target > nums[mid]) {
+                if (target <= nums[hi] && target > nums[mid]) { //Attention for "="
                     lo = mid + 1;
                 }
                 else {
