--- a/081.Search in Rotated Sorted Array II.md
+++ b/081.Search in Rotated Sorted Array II.md
@@ -19,3 +19,35 @@ public class Solution {
     }
 }
 ```
+
+Bianry Search！
+```java
+public class Solution {
+    public boolean search(int[] nums, int target) {
+        if (nums.length == 0) return false;
+        int lo = 0, hi = nums.length - 1;
+        while (lo < hi){
+            int mid = lo + (hi - lo) / 2;
+            if (target == nums[mid]) return true;
+            if (nums[hi] > nums[mid] || nums[mid] < nums[lo]) { //right is sorted
+                if (target <= nums[hi] && target > nums[mid]) {
+                    lo = mid + 1;
+                }
+                else {
+                    hi = mid - 1;
+                }
+            }
+            else if (nums[lo] < nums[mid] || nums[mid] > nums[hi]) { //left is sorted
+                if (target >= nums[lo] && target < nums[mid]) {
+                    hi = mid - 1;
+                }
+                else {
+                    lo = mid + 1;
+                }
+            }
+            else hi--;
+        }
+        return nums[lo] == target ? true : false;
+    }
+}
+```
