--- a/283.Move Zeroes.md
+++ b/283.Move Zeroes.md
@@ -14,8 +14,7 @@ public class Solution {
         int news = 0;
         for (int i = 0; i < nums.length; ++i) {
             if (nums[i] != 0) {
-                nums[news] = nums[i];
-                news ++;
+                nums[news ++] = nums[i];
             }
         }
         for (;news < nums.length; news ++) {
