Update 532.K-diff Pairs in an Array.md

--- a/532.K-diff Pairs in an Array.md
+++ b/532.K-diff Pairs in an Array.md
@@ -36,4 +36,30 @@ public class Solution {
 }
 ```
 
-Solution 2 - Hashmap
+Solution 2 - HashSet
+
+//HashSet不能有重复元素
+HashSet原理:
+当我们使用Set集合都是需要去掉重复元素的,如果在存储的时候逐个equals()比较,效率较低,哈希算法提高类去重复的效率,降低了equals()的使用次数
+当HashSet调用add()方法存储对象的时候,先调用对象的hashCode()方法,然后在集合中查找是否有哈希值相同的对象
+如果没有哈希值相同的对象就直接存入集合
+如果有哈希值相同的对象,就和哈希值相同的对象逐个进行equals()笔记,比较结果为false就存入,true则不存
+
+```java
+public class Solution {
+    public int findPairs(int[] nums, int k) {
+        if (nums.length <= 0 || k < 0) return 0;
+        
+        Set<Integer> start = new HashSet<> ();
+        Set<Integer> ans = new HashSet<> ();
+        for (int i = 0; i < nums.length; ++ i) {
+            if (start.contains(nums[i] - k)) ans.add(nums[i] - k);
+            if (start.contains(nums[i] + k)) ans.add(nums[i]);
+            start.add(nums[i]); //必须放loop最后，不然当k=0时会重复计算
+        }
+        return ans.size();
+    }
+}
+```
+
+Solution 2 - HashMap
