Update 532.K-diff Pairs in an Array.md

--- a/532.K-diff Pairs in an Array.md
+++ b/532.K-diff Pairs in an Array.md
@@ -1,4 +1,4 @@
-# K-diff Pairs in an Array
+# K-diff Pairs in an Array （Easy）
 
 Given an array of integers and an integer k, you need to find the number of unique k-diff pairs in the array. Here a k-diff pair is defined as an integer pair (i, j), where i and j are both numbers in the array and their absolute difference is k.
 
@@ -67,5 +67,3 @@ public class Solution {
     }
 }
 ```
-
-Solution 3 - HashMap
