--- a/532.K-diff Pairs in an Array.md
+++ b/532.K-diff Pairs in an Array.md
@@ -67,3 +67,30 @@ public class Solution {
     }
 }
 ```
+
+Solution 3 - HashMap
+```java
+public class Solution {
+    public int findPairs(int[] nums, int k) {
+        if (nums.length <= 0 || k < 0) return 0;
+        
+        int amount = 0;
+        Map<Integer, Integer> map = new HashMap<>();
+        for(int i = 0; i < nums.length; ++ i) {
+            map.put(nums[i], map.getOrDefault(nums[i], 0) + 1);
+        }
+        
+        for (Map.Entry<Integer, Integer> entry : map.entrySet()) {
+            if (k == 0) {
+                if (entry.getValue() >= 2) amount ++;
+            }
+            else {
+                if (map.containsKey(entry.getKey() + k)) {
+                    amount ++;
+                }
+            }
+        }
+        return amount;
+    }
+}
+```
