--- a/560.Subarray Sum Equals K.md
+++ b/560.Subarray Sum Equals K.md
@@ -10,6 +10,7 @@ Note:
 The length of the array is in range [1, 20,000].
 The range of numbers in the array is [-1000, 1000] and the range of the integer k is [-1e7, 1e7].
 
+Solution 1 - Brute Force
 ```java
 public class Solution {
     public int subarraySum(int[] nums, int k) {
@@ -26,3 +27,4 @@ public class Solution {
     }
 }
 ```
+Solution 2 - HashMap
