--- a/560.Subarray Sum Equals K.md
+++ b/560.Subarray Sum Equals K.md
@@ -28,3 +28,23 @@ public class Solution {
 }
 ```
 Solution 2 - HashMap
+```java
+public class Solution {
+    public int subarraySum(int[] nums, int k) {
+        if (nums.length <= 0) return 0;
+        
+        int amount = 0, sum = 0;
+        Map<Integer, Integer> map = new HashMap<>();
+        map.put(0,1);
+        
+        for (int i = 0; i < nums.length; ++ i) {
+            sum += nums[i];
+            if (map.containsKey(sum - k)) {
+                amount += map.get(sum - k);
+            }
+            map.put(sum, map.getOrDefault(sum, 0) + 1);
+        }
+        return amount;
+    }
+}
+```
