Update 560.Subarray Sum Equals K.md

--- a/560.Subarray Sum Equals K.md
+++ b/560.Subarray Sum Equals K.md
@@ -28,6 +28,7 @@ public class Solution {
 }
 ```
 Solution 2 - HashMap
+map中保存了从nums[0] +...+ nums[i]
 ```java
 public class Solution {
     public int subarraySum(int[] nums, int k) {
