--- a/523.Continuous Subarray Sum.md
+++ b/523.Continuous Subarray Sum.md
@@ -15,3 +15,25 @@ Explanation: Because [23, 2, 6, 4, 7] is an continuous subarray of size 5 and su
 Note:
 The length of the array won't exceed 10,000.
 You may assume the sum of all the numbers is in the range of a signed 32-bit integer.
+
+```java
+public class Solution {
+    public boolean checkSubarraySum(int[] nums, int k) {
+        int sum = 0;
+        if (nums.length <= 1) return false;
+        
+        Map<Integer, Integer> map = new HashMap<>();
+        map.put(0, -1);
+        
+        for (int i = 0; i < nums.length; ++ i) {
+            sum += nums[i];
+            if (k != 0) sum %= k;
+            
+            if (map.containsKey(sum)) {
+                if (i - map.get(sum) > 1) return true;
+            } else map.put(sum, i);
+        }
+        return false;
+    }
+}
+```
