Update 034.Search for a Range.md

--- a/034.Search for a Range.md
+++ b/034.Search for a Range.md
@@ -26,7 +26,7 @@ public class Solution {
         if (target != nums[lo]) return ans;
         else ans[0] = lo;
         
-        hi = nums.length - 1;  //此时lo已经是lowest index for target，所以不用update lo的值
+        hi = nums.length - 1;  //此时lo已经是lowest index of target，所以不用update lo的值
         while (lo < hi) {
             int mid = (lo + hi) / 2 + 1;
             if (target >= nums[mid]) lo = mid;
