Update 034.Search for a Range.md

--- a/034.Search for a Range.md
+++ b/034.Search for a Range.md
@@ -18,22 +18,23 @@ public class Solution {
         int ans[] = new int[2];
         ans[0] = -1;
         ans[1] = -1;
+        
+        if (nums.length < 1) return ans;
+        
         while (lo < hi){
             int mid = (lo + hi) / 2;
             if (target <= nums[mid]) hi = mid;
             else lo = mid + 1;
             }
-        if (target != nums[lo]) return ans;
-        else ans[0] = lo;
+        if (target == nums[lo]) ans[0] = lo;
         
-        hi = nums.length - 1;  //此时lo已经是lowest index of target，所以不用update lo的值
+        hi = nums.length - 1;  //此时lo已经是lowest index for target，所以不用update lo的值
         while (lo < hi) {
             int mid = (lo + hi) / 2 + 1;
             if (target >= nums[mid]) lo = mid;
             else hi = mid - 1;
         }
-        if (target != nums[hi]) return ans;
-        ans[1] = hi;
+        if (target == nums[hi]) ans[1] = hi;
         
         return ans;
     }
