Update 034.Search for a Range.md

--- a/034.Search for a Range.md
+++ b/034.Search for a Range.md
@@ -1,4 +1,4 @@
-# Search for a Range
+# Search for a Range (Medium)
 
 Given an array of integers sorted in ascending order, find the starting and ending position of a given target value.
 
