--- a/035.Search Insert Position.md
+++ b/035.Search Insert Position.md
@@ -11,7 +11,7 @@ Here are few examples.
 [1,3,5,6], 0 → 0
 
 
-``java
+```java
 public class Solution {
     public int searchInsert(int[] nums, int target) {
         int lo = 0, hi = nums.length - 1, ans = 0;
