Update 041.First Missing Positive.md

--- a/041.First Missing Positive.md
+++ b/041.First Missing Positive.md
@@ -8,6 +8,7 @@ and [3,4,-1,1] return 2.
 
 Your algorithm should run in O(n) time and uses constant space.
 
+Solution 1 - HashMap (used a new space - wrong)
 ```java
 public class Solution {
     public int firstMissingPositive(int[] nums) {
