Update 041.First Missing Positive.md

--- a/041.First Missing Positive.md
+++ b/041.First Missing Positive.md
@@ -29,3 +29,30 @@ public class Solution {
     }
 }
 ```
+
+Solution 2 - Put the number in its right place in the same array.
+
+```java
+public class Solution {
+    public int firstMissingPositive(int[] nums) {
+        
+        for (int i = 0; i < nums.length; ++ i) {
+            while (nums[i] > 0 && nums[i] <= nums.length && nums[nums[i] - 1] != nums[i]) { // must be "while", cannot be "if", because we need to put the number in the right place with more than one swap.
+                swap(nums, i, nums[i] - 1);;
+            }
+        }
+        
+        for(int i = 0; i < nums.length; ++ i)
+            if(nums[i] != i + 1)
+                return i + 1;
+        return nums.length + 1;
+    }  
+        
+    public void swap (int[] A, int a, int b) {
+        int temp = 0;
+        temp = A[a];
+        A[a] = A[b];
+        A[b] = temp;
+    }
+}
+```
