--- a/042.Trapping Rain Water.md
+++ b/042.Trapping Rain Water.md
@@ -1,4 +1,12 @@
-# Trapping Rain Water
+# Trapping Rain Water (Hard)
+
+Given n non-negative integers representing an elevation map where the width of each bar is 1, compute how much water it is able to trap after raining.
+
+**For example**
+Given `[0,1,0,2,1,0,1,3,2,1,2,1]`, return `6`.
+
+![](https://github.com/ysong49/LeetCode-Note/blob/master/image/rainwatertrap.png)   
+The above elevation map is represented by array [0,1,0,2,1,0,1,3,2,1,2,1]. In this case, 6 units of rain water (blue section) are being 
 
 Solution 1 - Brute Force
 
@@ -26,6 +34,47 @@ public class Solution {
             }
             
         }
+        return ans;
+    }
+}
+```
+
+Solution 2 - DP
+Intuition
+
+In brute force, we iterate over the left and right parts again and again just to find the highest bar size upto that index. But, this could be stored. Voila, dynamic programming.
+
+The concept is illustrated as shown:
+https://leetcode.com/problems/Figures/42/trapping_rain_water.png
+Algorithm
+
+Find maximum height of bar from the left end upto an index i in the array left_max
+Find maximum height of bar from the right end upto an index i in the array right_max
+Iterate over the height array and update ans:Add min(max_left[i],max_right[i])−height[i] to ans
+
+```java
+public class Solution {
+    public int trap(int[] height) {
+        int ans = 0;
+        if (height.length <= 2) return ans;
+        
+        int[] left = new int[height.length];
+        int[] right = new int[height.length];
+        left[0] = height[0];
+        right[height.length - 1] = height[height.length - 1];
+        
+        for (int i = 1; i < height.length; i ++) {
+            left[i] = Math.max(left[i - 1], height[i]);
+        }
+        
+        for (int i = height.length - 2; i >= 0; i --) {
+            right[i] = Math.max(right[i + 1], height[i]);
+        }
+        
+        for (int i = 0; i < height.length; i ++) {
+            ans += Math.min(left[i], right[i]) - height[i];
+        }
+        
         return ans;
     }
 }
