--- a/042.Trapping Rain Water.md
+++ b/042.Trapping Rain Water.md
@@ -7,7 +7,7 @@
 **Given `[0,1,0,2,1,0,1,3,2,1,2,1]`, return `6`.
 
 ![](https://github.com/ysong49/LeetCode-Note/blob/master/image/rainwatertrap.png)   
-**The above elevation map is represented by array [0,1,0,2,1,0,1,3,2,1,2,1]. In this case, 6 units of rain water (blue section) are being
+**The above elevation map is represented by array [0,1,0,2,1,0,1,3,2,1,2,1]. In this case, 6 units of rain water (blue section) are being**
 
 Solution 1 - Brute Force
 
