--- a/042.Trapping Rain Water.md
+++ b/042.Trapping Rain Water.md
@@ -1,12 +1,13 @@
 # Trapping Rain Water (Hard)
 
-**Given n non-negative integers representing an elevation map where the width of each bar is 1, compute how much water it is able to trap after raining.
+**Given n non-negative integers representing an elevation map where the width of each bar is 1, compute how much water it is able to trap after raining.**
 
-**For example
+**For example**
 
-**Given `[0,1,0,2,1,0,1,3,2,1,2,1]`, return `6`.
+**Given `[0,1,0,2,1,0,1,3,2,1,2,1]`, return `6`.**
 
 ![](https://github.com/ysong49/LeetCode-Note/blob/master/image/rainwatertrap.png)   
+
 **The above elevation map is represented by array [0,1,0,2,1,0,1,3,2,1,2,1]. In this case, 6 units of rain water (blue section) are being**
 
 Solution 1 - Brute Force
