Update 238.Product of Array Except Self.md

--- a/238.Product of Array Except Self.md
+++ b/238.Product of Array Except Self.md
@@ -11,7 +11,7 @@
 Could you solve it with constant space complexity? (Note: The output array does not count as extra space for the purpose of space complexity analysis.)**
 
 
-Use DP:
+Solution 1 - Without division, with extra space, Space complexity = O(n).
 ```java
 public class Solution {
     public int[] productExceptSelf(int[] nums) {
@@ -39,3 +39,5 @@ public class Solution {
     }
 }
 ```
+
+Solution 2 - Without division, without extra space, space complexity = O(1).
