--- a/238.Product of Array Except Self.md
+++ b/238.Product of Array Except Self.md
@@ -41,3 +41,23 @@ public class Solution {
 ```
 
 Solution 2 - Without division, without extra space, space complexity = O(1).
+```java
+public class Solution {
+    public int[] productExceptSelf(int[] nums) {
+        int[] output = new int[nums.length];
+        output[0] = 1;
+        
+        for (int i = 1; i < nums.length; i ++) {
+            output[i] = output[i - 1] * nums[i - 1];
+        }
+        
+        int temp = 1;
+        for (int i = nums.length - 2; i >= 0; i --) {
+            temp *= nums[i + 1];
+            output[i] *= temp;
+        }
+        
+        return output;
+    }
+}
+```
