Update 152.Maximum Product Subarray.md

--- a/152.Maximum Product Subarray.md
+++ b/152.Maximum Product Subarray.md
@@ -14,7 +14,7 @@ public class Solution {
         int min = nums[0];
         
         for (int i = 1; i < nums.length; i ++) {
-            int temp = max;
+            int temp = max; //the max shoule be store becaues the next step will change the max value
             max = Math.max(nums[i], Math.max(temp * nums[i], min * nums[i]));
             min = Math.min(nums[i], Math.min(temp * nums[i], min * nums[i]));
             if (max > ans) ans = max;
