Update 628.Maximum Product of Three Numbers.md

--- a/628.Maximum Product of Three Numbers.md
+++ b/628.Maximum Product of Three Numbers.md
@@ -1,4 +1,4 @@
-# Maximum Product of Three Numbers
+# Maximum Product of Three Numbers (Easy)
 
 **Given an integer array, find three numbers whose product is maximum and output the maximum product.**
 
