--- a/628.Maximum Product of Three Numbers.md
+++ b/628.Maximum Product of Three Numbers.md
@@ -14,6 +14,7 @@
 **The length of the given array will be in range [3,104] and all elements are in the range [-1000, 1000].**
 **Multiplication of any three numbers in the input won't exceed the range of 32-bit signed integer.**
 
+Solution 1 - Using sort
 ```java
 public class Solution {
     public int maximumProduct(int[] nums) {
