--- a/081.Search in Rotated Sorted Array II.md
+++ b/081.Search in Rotated Sorted Array II.md
@@ -1,5 +1,18 @@
-# Search in Rotated Sorted Array II
+# Search in Rotated Sorted Array II (Medium)
 
+**Follow up for "Search in Rotated Sorted Array":
+What if duplicates are allowed?**
+
+**Would this affect the run-time complexity? How and why?
+Suppose an array sorted in ascending order is rotated at some pivot unknown to you beforehand.**
+
+**(i.e., 0 1 2 4 5 6 7 might become 4 5 6 7 0 1 2).**
+
+**Write a function to determine if a given target is in the array.**
+
+**The array may contain duplicates.**
+
+Solution 1
 ```java
 public class Solution {
     public boolean search(int[] nums, int target) {
@@ -20,7 +33,7 @@ public class Solution {
 }
 ```
 
-Bianry Search！
+Solution 2 -- Bianry Search
 ```java
 public class Solution {
     public boolean search(int[] nums, int target) {
