--- a/055.Jump Game.md
+++ b/055.Jump Game.md
@@ -1,4 +1,4 @@
-#Jump Game
+## Jump Game
 
 **Given an array of non-negative integers, you are initially positioned at the first index of the array.**
 
