--- a/056.Merge Intervals.md
+++ b/056.Merge Intervals.md
@@ -19,7 +19,7 @@ Solution - using ArrayList, because we don't know the number of arrays.
  * }
  */
 public class Solution {
-    public List<Interval> merge(List<Interval> intervals) {
+    public List<Interval> merge(List<Interval> intervals) { //输入是list型的intervals
         int n = intervals.size();
         int[] start = new int[n];
         int[] end = new int[n];
