--- a/056.Merge Intervals.md
+++ b/056.Merge Intervals.md
@@ -42,3 +42,43 @@ public class Solution {
     }
 }
 ```
+
+The difference with first solution is this one is using Lambda, for Lambda note:
+https://github.com/zaa9205/Java_note/blob/master/Lambda表达式.md
+
+```java
+/**
+ * Definition for an interval.
+ * public class Interval {
+ *     int start;
+ *     int end;
+ *     Interval() { start = 0; end = 0; }
+ *     Interval(int s, int e) { start = s; end = e; }
+ * }
+ */
+public class Solution {
+    public List<Interval> merge(List<Interval> intervals) {
+        if (intervals.size() <= 1) return intervals;
+        
+        intervals.sort((i1, i2) -> Integer.compare(i1.start, i2.start));
+        int start = intervals.get(0).start;
+        int end = intervals.get(0).end;
+        
+        List<Interval> ans = new ArrayList<>();
+        for (Interval interval: intervals) {
+            if (interval.start <= end) { 
+                //must bu <=, can not be <. Because if the input is [1,3] [2,4] [4,8], the output should be [1,8], if the condition is <, the output is [1,4] [4,8];
+                end = Math.max(interval.end, end);
+            }
+            else {
+                ans.add(new Interval(start, end));
+                start = interval.start;
+                end = interval.end;
+            }
+        }
+        
+        ans.add(new Interval(start,end)); //
+        return ans;
+    }
+}
+```
