--- a/056.Merge Intervals.md
+++ b/056.Merge Intervals.md
@@ -77,7 +77,7 @@ public class Solution {
             }
         }
         
-        ans.add(new Interval(start,end)); //
+        ans.add(new Interval(start,end)); //don't forget
         return ans;
     }
 }
