--- a/056.Merge Intervals.md
+++ b/056.Merge Intervals.md
@@ -74,7 +74,7 @@ public class Solution {
                 ans.add(new Interval(start, end));
                 start = interval.start;
                 end = interval.end;
-                //此时start & end 还没有被add
+                //此时start & end 还没有被add，所以loop结束后要再加上
             }
         }
         
