--- a/057.Insert Interval.md
+++ b/057.Insert Interval.md
@@ -1,4 +1,4 @@
-# Insert Interval
+# Insert Interval (Hard)
 
 **Given a set of non-overlapping intervals, insert a new interval into the intervals (merge if necessary).**
 
@@ -36,12 +36,10 @@ public class Solution {
             start[i + 1] = intervals.get(i).start;
             end[i + 1] = intervals.get(i).end;
         }
-        
-        List<Interval> ans = new ArrayList<>();
-        
+             
         Arrays.sort(start);
         Arrays.sort(end);
-    
+        List<Interval> ans = new ArrayList<>();  
         for (int i = 0, j = 0; i <= n && j <= n; i ++) {
             if (i == n || end[i] < start[i + 1]) {
                 ans.add(new Interval(start[j], end[i]));
