--- a/287.Find the Duplicate Number.md
+++ b/287.Find the Duplicate Number.md
@@ -35,6 +35,7 @@ public class Solution {
 Solution 2 - Linked list circle (http://blog.csdn.net/monkeyduck/article/details/50439840)
 
 https://github.com/zaa9205/images/blob/master/287.duplicate%20number.jpeg
+![Alt Text](https://github.com/zaa9205/images/blob/master/287.duplicate%20number.jpeg)
 
 ```java
 
