Update 287.Find the Duplicate Number.md

--- a/287.Find the Duplicate Number.md
+++ b/287.Find the Duplicate Number.md
@@ -37,5 +37,23 @@ Solution 2 - Linked list circle (http://blog.csdn.net/monkeyduck/article/details
 ![Alt Text](https://github.com/zaa9205/images/blob/master/287.duplicate%20number.jpeg)
 
 ```java
-
+public class Solution {
+    public int findDuplicate(int[] nums) {
+        int slow_index = nums[0], fast_index = nums[nums[0]]; //初始条件一定要写对，刚开始的时候就slow_index就已经走了一步，fast_index走了两步
+        
+        while (slow_index != fast_index) {
+            slow_index = nums[slow_index];
+            fast_index = nums[nums[fast_index]];
+        }
+        
+        fast_index = 0;
+        
+        while (slow_index != fast_index) {
+            slow_index = nums[slow_index];
+            fast_index = nums[fast_index];
+        }
+        
+        return slow_index;
+    }
+}
 ```
