--- a/136.Single Number.md
+++ b/136.Single Number.md
@@ -1,4 +1,4 @@
-# Single Number
+# Single Number (Easy)
 
 **Given an array of integers, every element appears twice except for one. Find that single one.**
 
