--- a/268.Missing Number.md
+++ b/268.Missing Number.md
@@ -1,16 +1,16 @@
-# Missing Number
+# Missing Number (Easy)
 
-Given an array containing n distinct numbers taken from 0, 1, 2, ..., n, find the one that is missing from the array.
+**Given an array containing n distinct numbers taken from 0, 1, 2, ..., n, find the one that is missing from the array.**
 
-For example,
-Given nums = [0, 1, 3] return 2.
+**For example,
+Given nums = [0, 1, 3] return 2.**
 
-Note:
-Your algorithm should run in linear runtime complexity. Could you implement it using only constant extra space complexity?
+**Note:
+Your algorithm should run in linear runtime complexity. Could you implement it using only constant extra space complexity?**
 
 //There are 3 solutions, the first one is XOR, the second is SUM, the last one is Binary Search. If the array is sorted, the best choice is Binary Search, for unsorted array, we can use XOR and SUM, but the XOR is better.
 
-SUM solution
+Solution 1 - SUM solution
 ```java
 public class Solution {
     public int missingNumber(int[] nums) {
@@ -25,7 +25,7 @@ public class Solution {
 }
 ```
 
-XOR solution
+Solution 2 - XOR solution (Same with 136.Single Number https://github.com/zaa9205/leetcode/blob/master/136.Single%20Number.md)
 ```java
 public class Solution {
     public int missingNumber(int[] nums) {
