--- a/136.Single Number.md
+++ b/136.Single Number.md
@@ -5,7 +5,7 @@
 **Note:
 Your algorithm should have a linear runtime complexity. Could you implement it without using extra memory?**
 
-Solution - XOR
+Solution - XOR (Same with 268.Missing Number https://github.com/zaa9205/leetcode/blob/master/268.Missing%20Number.md)
 ```java
 public class Solution {
     public int singleNumber(int[] nums) {
