Update 000.Need to do.md

--- a/000.Need to do.md
+++ b/000.Need to do.md
@@ -1,2 +1,7 @@
-137. Single Number II - XOR
+XOR:
+
+137. Single Number II
 https://leetcode.com/problems/single-number-ii/description/
+
+260. Single Number III
+https://leetcode.com/problems/single-number-iii/description/
