Update 389.Find the Difference.md

--- a/389.Find the Difference.md
+++ b/389.Find the Difference.md
@@ -1,4 +1,4 @@
-# Find the Difference
+# Find the Difference (Easy)
 
 **Given two strings s and t which consist of only lowercase letters.**
 
@@ -33,3 +33,21 @@ public class Solution {
     }
 }
 ```
+
+the updated XOR answer:
+```java
+public class Solution {
+    public char findTheDifference(String s, String t) {
+        int n = s.length();
+        char ans = t.charAt(n);
+        
+        for (int i = 0; i < n; i ++) {
+            ans ^= s.charAt(i);
+            ans ^= t.charAt(i);
+        }
+        return ans;
+    }
+}
+```
+
+Solution 2 - 
