Update 389.Find the Difference.md

--- a/389.Find the Difference.md
+++ b/389.Find the Difference.md
@@ -50,4 +50,23 @@ public class Solution {
 }
 ```
 
-Solution 2 - 
+Solution 2 - Using an array to count the appears number of every letter in String S, then in T string, subtract 1 at every letter, then if the appear number of the letter is less than 0, then it is the answer.
+```java
+public class Solution {
+    public char findTheDifference(String s, String t) {
+        int[] alpha = new int[26];
+        char ans = 0;
+        
+        for (int i = 0; i < s.length(); i ++) {
+            alpha[s.charAt(i) - 'a'] ++;
+        }
+        for (int i = 0; i < t.length(); i ++) {
+            if (-- alpha[t.charAt(i) - 'a'] < 0 ) {
+                ans = t.charAt(i);
+                break;
+            }
+        }  
+        return ans;
+    }
+}
+```
