--- a/007.Reverse Integer.md
+++ b/007.Reverse Integer.md
@@ -18,3 +18,22 @@ Here are some good questions to ask before coding. Bonus points for you if you h
 
 **Note:
 The input is assumed to be a 32-bit signed integer. Your function should return 0 when the reversed integer overflows.**
+
+```java
+public class Solution {
+    public int reverse(int x) {
+        long ans = 0; //ans必须是long, 因为不确定reverse后是否会越界
+        int unit = 0;
+        
+        while (x != 0) {
+            unit = x % 10;
+            ans = ans * 10 + unit;
+            x = x/10;
+        }          
+        if (ans > Integer.MAX_VALUE || ans < Integer.MIN_VALUE) {
+                return 0;
+        }
+        else return (int)ans;
+    }
+}
+```
