--- a/007.Reverse Integer.md
+++ b/007.Reverse Integer.md
@@ -19,6 +19,7 @@ Here are some good questions to ask before coding. Bonus points for you if you h
 **Note:
 The input is assumed to be a 32-bit signed integer. Your function should return 0 when the reversed integer overflows.**
 
+Solution 1 - decide whether the anwer is overflow after the reverse has done. Attention, for this situation, we need use set the anwer as long!! 
 ```java
 public class Solution {
     public int reverse(int x) {
@@ -37,3 +38,5 @@ public class Solution {
     }
 }
 ```
+
+Solution 2 - 
