--- a/007.Reverse Integer.md
+++ b/007.Reverse Integer.md
@@ -39,4 +39,21 @@ public class Solution {
 }
 ```
 
-Solution 2 - 
+Solution 2 - decide the overflow when reversing.
+```java
+public class Solution {
+    public int reverse(int x) {
+        int ans = 0, currentans = 0, unit = 0;
+        
+        while ( x != 0) {
+            unit = x % 10;
+            currentans = currentans * 10 + unit;
+            if ( currentans / 10 != ans)
+                return 0;
+            ans = currentans;
+            x = x / 10;
+        }
+        return ans;
+    }
+}
+```
