Update 008.String to Integer.md

--- a/008.String to Integer.md
+++ b/008.String to Integer.md
@@ -23,6 +23,18 @@ The string can contain additional characters after those that form the integral 
 
 **If no valid conversion could be performed, a zero value is returned. If the correct value is out of the range of representable values, INT_MAX (2147483647) or INT_MIN (-2147483648) is returned.**
 
+Note:
+
+You need to hanle these 4 special cases:
+
+1. discards all leading whitespaces
+
+2. sign of the number
+
+3. overflow
+
+4. invalid input
+
 ```java
 public class Solution {
     public int myAtoi(String str) {
