Update 008.String to Integer.md

--- a/008.String to Integer.md
+++ b/008.String to Integer.md
@@ -53,15 +53,13 @@ public class Solution {
             else if ((int)str.charAt(i) >= '0' && (int)str.charAt(i) <= '9') {
                 unit = (int)str.charAt(i) - '0';
                 ans = ans * 10 + unit;
+                if (sign == 1 && ans > Integer.MAX_VALUE) return Integer.MAX_VALUE;
+		        if (sign == -1 && (-1) * ans < Integer.MIN_VALUE) return Integer.MIN_VALUE;
             }
-            else break;
-            
-            if (ans >= Integer.MAX_VALUE) {
-                return sign == -1 ? Integer.MIN_VALUE: Integer.MAX_VALUE;
-            }
+            else break;          
         }
               
-        return sign == -1 ? -ans : ans;
+        return sign == -1 ? (-ans) : ans;
     }
 }
 ```
