--- a/190.Reverse Bits.md
+++ b/190.Reverse Bits.md
@@ -9,6 +9,7 @@ If this function is called many times, how would you optimize it?**
 
 **Related problem: 007.Reverse Integer **
 
+Solution - add the last unit to result by using n&1, and move to left one step every loop. 
 ```java
 public class Solution {
     // you need treat n as an unsigned value
