Update 231.Power of Two.md

--- a/231.Power of Two.md
+++ b/231.Power of Two.md
@@ -4,7 +4,7 @@
 
 Related to 190.Reverse Bits, 191.Number of 1 Bits.
 
-Solution - first the integer should be positive, second if the number is power of two, its "Hamming weight" should be 1.
+Solution 1 - first the integer should be positive, second if the number is power of two, its "Hamming weight" should be 1.
 
 ```java
 class Solution {
@@ -16,6 +16,25 @@ class Solution {
             n >>= 1;
         }
         return ans == 1 ? true : false;
+    }
+}
+```
+Solution 2 - using method in Java Integer.bitCount(n)
+
+```java
+class Solution {
+    public boolean isPowerOfTwo(int n) {
+        return n > 0 && Integer.bitCount(n) == 1;
+    }
+}
+```
+
+Solution 3 - if the number n is the power of two, the (n - 1) & n should be 0, because the bianry of n and the n - 1 is totally different.
+```java
+class Solution {
+    public boolean isPowerOfTwo(int n) {
+        if ( n <= 0) return false;
+        else return (n&(n-1)) == 0 ? true : false;
     }
 }
 ```
