Update 191.Number of 1 Bits.md

--- a/191.Number of 1 Bits.md
+++ b/191.Number of 1 Bits.md
@@ -6,6 +6,8 @@
 
 Related to 190.Reverse Bits
 
+Solution 1 - find every bit in binary n
+
 ```java
 public class Solution {
     // you need to treat n as an unsigned value
@@ -16,6 +18,16 @@ public class Solution {
             n >>>= 1;
         }
         return ans;
+    }
+}
+```
+
+Solution 2 - using method in Java Integer.bitCount(n);
+```java
+public class Solution {
+    // you need to treat n as an unsigned value
+    public int hammingWeight(int n) {
+        return Integer.bitCount(n);
     }
 }
 ```
