--- a/338.Counting Bits.md
+++ b/338.Counting Bits.md
@@ -23,3 +23,16 @@ class Solution {
     }
 }
 ```
+
+Solution 2 - the solution can be transfer to  ans[i] = ans[i / 2] + i % 2.
+```java
+class Solution {
+    public int[] countBits(int num) {
+        int[] ans = new int[num + 1];
+        for (int i = 0; i <= num; i ++) {
+            ans[i] = ans[i >> 1] + i % 2;
+        }
+        return ans;
+    }
+}
+```
