--- a/043.Multiply Strings.md
+++ b/043.Multiply Strings.md
@@ -37,3 +37,36 @@ class Solution {
     }
 }
 ```
+
+Solution 2 - 先存储每一位相乘的结果，再进位。
+```java
+class Solution {
+    public String multiply(String num1, String num2) {
+        int len1 = num1.length();
+        int len2 = num2.length();
+        int carry = 0, mul = 0;
+        int[] ans = new int[len1 + len2];
+        
+        for (int i = len1 - 1; i >= 0; i --) {
+            for (int j = len2 - 1; j >= 0; j --) {
+                mul = (num1.charAt(i) - '0') * (num2.charAt(j) - '0');
+                ans[i + j + 1] += mul;
+            }
+        }
+        for (int i = len1 + len2 - 1; i >= 0; i --) {
+            carry = ans[i] / 10;
+            if (carry > 0) {
+                ans[i - 1] += carry;
+                ans[i] %= 10;
+            }
+        }
+        
+        StringBuffer lastans = new StringBuffer();
+        for (int i = 0; i < len1 + len2; i ++) {
+            if (!(lastans.length() == 0 && ans[i] == 0)) lastans.append(ans[i]);
+        }
+        
+        return lastans.length() == 0 ? "0" : lastans.toString();       
+    }
+}
+```
