Update 003.Longest Substring Without Repeating Characters.md

--- a/003.Longest Substring Without Repeating Characters.md
+++ b/003.Longest Substring Without Repeating Characters.md
@@ -34,3 +34,23 @@ class Solution {
     }
 }
 ```
+
+Optimized solution 
+```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        HashMap<Character, Integer> alpha = new HashMap<>();
+        int ans = 0;
+        
+        for (int i = 0, j = 0; i < s.length() && j < s.length(); j ++) {
+            if (alpha.containsKey(s.charAt(j))) {
+                i = Math.max(alpha.get(s.charAt(j)) + 1, i);
+            }
+            ans = Math.max(ans, j - i + 1);
+            alpha.put(s.charAt(j), j);
+        }
+        
+        return ans;
+    }
+}
+```
