--- a/028.Implement strStr().md
+++ b/028.Implement strStr().md
@@ -6,7 +6,7 @@ Returns the index of the first occurrence of needle in haystack, or -1 if needle
 
 
 Solution 1 - using String function [substring] [equals]
-``java
+```java
 class Solution {
     public int strStr(String haystack, String needle) {
         int haylength = haystack.length(), neelength = needle.length();
