--- a/028.Implement strStr().md
+++ b/028.Implement strStr().md
@@ -23,5 +23,19 @@ class Solution {
 
 Solution 2 - using two index
 ```java
-
+class Solution {
+    public int strStr(String haystack, String needle) {
+        int haylength = haystack.length(), neelength = needle.length();
+        if (haylength < neelength) return -1;
+        if (neelength == 0) return 0;
+        
+        for (int i = 0; ; i ++) { //index for haystack
+            for (int j = 0; ; j ++) { //index for needle               
+                if (j == neelength) return i; //must be put at 1st
+                if (i + j == haylength) return -1; //the condition of end
+                if (haystack.charAt(i + j) != needle.charAt(j)) break;
+            }
+        }
+    }
+}
 ```
