--- a/006.ZigZag Conversion.md
+++ b/006.ZigZag Conversion.md
@@ -14,5 +14,27 @@ Write the code that will take a string and make this conversion given a number o
 **string convert(string text, int nRows);
 convert("PAYPALISHIRING", 3) should return "PAHNAPLSIIGYIR".**
 
-Solution
-P   A   H   N
+Solution - StringBuilder
+```java
+class Solution {
+    public String convert(String s, int numRows) {     
+        StringBuilder[] ans = new StringBuilder[numRows];
+        for (int i = 0; i < numRows; i ++)
+            ans[i] = new StringBuilder();          
+        
+        int index = 0, len = s.length();
+        
+        while (index < len) {
+            for (int row = 0; row < numRows && index < len; row ++)
+                ans[row].append(s.charAt(index ++));
+            for (int row = numRows - 2; row >= 1 && index < len; row --)
+                ans[row].append(s.charAt(index ++));
+        }
+        
+        for (int i = 1; i < numRows; i ++)
+            ans[0].append(ans[i]);
+        
+        return ans[0].toString();
+    }
+}
+```
