--- a/017. Letter Combinations of a Phone Number.md
+++ b/017. Letter Combinations of a Phone Number.md
@@ -4,7 +4,7 @@ Given a digit string, return all possible letter combinations that the number co
 
 A mapping of digit to letters (just like on the telephone buttons) is given below.
 
-
+images/017. Letter Combinations of a Phone Number.png
 
 Input:Digit string "23"
 Output: ["ad", "ae", "af", "bd", "be", "bf", "cd", "ce", "cf"].
