Update 017. Letter Combinations of a Phone Number.md

--- a/017. Letter Combinations of a Phone Number.md
+++ b/017. Letter Combinations of a Phone Number.md
@@ -13,3 +13,28 @@ Output: ["ad", "ae", "af", "bd", "be", "bf", "cd", "ce", "cf"].**
 Although the above answer is in lexicographical order, your answer could be in any order you want.**
 
 Solution 1 - DFS
+
+
+Solution 2 - Iterative Solution: For each digit added, remove and copy every element in the queue and add the possible letter to each element, then add the updated elements back into queue again. Repeat this procedure until all the digits are iterated.
+```java
+class Solution {
+    public List<String> letterCombinations(String digits) {
+        LinkedList<String> ans = new LinkedList<String>();
+        if (digits.length() == 0) return ans; // must before the ans.add(""), or the case [] cannot pass
+        ans.add("");
+        String[] key = {"", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};
+        
+        
+        for (int i = 0; i < digits.length(); i ++) {
+            while (ans.peek().length() == i) {
+                int x = digits.charAt(i) - '0';
+                String origin = ans.remove();
+                char[] letter = key[x].toCharArray();
+                for (int j = 0; j < letter.length; j ++)
+                    ans.add(origin + letter[j]);
+            }
+        }
+        return ans;
+    }
+}
+```
