--- a/017. Letter Combinations of a Phone Number.md
+++ b/017. Letter Combinations of a Phone Number.md
@@ -21,8 +21,8 @@ class Solution {
     public List<String> letterCombinations(String digits) {
         LinkedList<String> ans = new LinkedList<String>();
         if (digits.length() == 0) return ans; // must before the ans.add(""), or the case [] cannot pass
-        ans.add("");
-        String[] key = {"", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};
+        ans.add(""); //LinkedList.add(E) == LinkedList.addLast(E) 
+        String[] key = {"", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};    
         
         for (int i = 0; i < digits.length(); i ++) {
             while (ans.peek().length() == i) {
