Update 017. Letter Combinations of a Phone Number.md

--- a/017. Letter Combinations of a Phone Number.md
+++ b/017. Letter Combinations of a Phone Number.md
@@ -25,8 +25,8 @@ class Solution {
         String[] key = {"", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};    
         
         for (int i = 0; i < digits.length(); i ++) {
-            while (ans.peek().length() == i) {
-                int x = digits.charAt(i) - '0';
+            while (ans.peek().length() == i) { // core coding in this problem
+                int x = digits.charAt(i) - '0';
                 String origin = ans.remove();
                 char[] letter = key[x].toCharArray();
                 for (int j = 0; j < letter.length; j ++)
