Update 023.Merge k Sorted Lists.md

--- a/023.Merge k Sorted Lists.md
+++ b/023.Merge k Sorted Lists.md
@@ -1,6 +1,8 @@
-# Merge k Sorted Lists
+# Merge k Sorted Lists (Hard)
 
 **Merge k sorted linked lists and return it as one sorted list. Analyze and describe its complexity.**
+
+Solution 1 - merge sort (14ms)
 
 ```java
 /**
