--- a/239.Sliding Window Maximum.md
+++ b/239.Sliding Window Maximum.md
@@ -5,7 +5,8 @@
 **For example,
 Given nums = [1,3,-1,-3,5,3,6,7], and k = 3.**
 
-![Alt Text](https:https://github.com/zaa9205/images/blob/master/239.Sliding%20Window%20Maximum.png)
+![Alt Text]
+(https:https://github.com/zaa9205/images/blob/master/239.Sliding%20Window%20Maximum.png)
 
 **Therefore, return the max sliding window as [3,3,5,5,6,7].**
 
