Update 239.Sliding Window Maximum.md

--- a/239.Sliding Window Maximum.md
+++ b/239.Sliding Window Maximum.md
@@ -14,3 +14,31 @@ You may assume k is always valid, ie: 1 ≤ k ≤ input array's size for non-emp
 
 **Follow up:
 Could you solve it in linear time?**
+
+Solution - TreeMap
+```java
+class Solution {
+    public int[] maxSlidingWindow(int[] nums, int k) {
+        int len = nums.length;
+        if (len <= 0 || k <= 0) return new int[]{};
+        
+        int[] ans = new int[len - k + 1];
+        TreeMap<Integer, Integer> bst = new TreeMap<>((o1, o2) -> o1 - o2);
+        
+        for (int i = 0; i < len; i ++) {
+            if (bst.containsKey(nums[i]))
+                bst.put(nums[i], bst.get(nums[i]) + 1);
+            else bst.put(nums[i], 1);
+            if (i >= k) {
+                bst.put(nums[i - k], bst.get(nums[i - k]) - 1);
+                if (bst.get(nums[i - k]) == 0) 
+                    bst.remove(nums[i - k]);
+            }          
+            if (i - k + 1 >= 0) {
+                ans[i - k + 1] = bst.lastKey();
+            }
+        }
+        return ans;
+    }
+}
+```
