Update 239.Sliding Window Maximum.md

--- a/239.Sliding Window Maximum.md
+++ b/239.Sliding Window Maximum.md
@@ -15,7 +15,7 @@ You may assume k is always valid, ie: 1 ≤ k ≤ input array's size for non-emp
 **Follow up:
 Could you solve it in linear time?**
 
-Solution - TreeMap
+Solution 1 - TreeMap
 ```java
 class Solution {
     public int[] maxSlidingWindow(int[] nums, int k) {
@@ -38,6 +38,36 @@ class Solution {
                 ans[i - k + 1] = bst.lastKey();
             }
         }
+        return ans;
+    }
+}
+```
+Solution 2 - deque
+```java
+class Solution {
+    public int[] maxSlidingWindow(int[] nums, int k) {
+        int len = nums.length;
+        if (len <= 0 && k <= 0) return new int[]{}; //?
+        
+        int[] ans = new int[len - k + 1];
+        Deque<Integer> _deque = new LinkedList<>();
+        
+        for (int i = 0; i < len; i ++) {
+            //1, maintain the _deque, the _deque contains all the possible max number in nums[i - k, i]
+            while (!_deque.isEmpty() && nums[_deque.getLast()] <= nums[i]) {
+                _deque.removeLast();
+            }
+            _deque.add(i); //push the new nums[i] to _deque
+            
+            //2, remove the possible nums[] beyond the k
+            if (_deque.getFirst() <= i - k)
+                _deque.removeFirst();
+            
+            //3, store the max number in ans 
+            if (i - k + 1 >= 0)
+                ans[i - k + 1] = _deque.getFirst();
+        }
+        
         return ans;
     }
 }
