--- a/027.Remove Element.md
+++ b/027.Remove Element.md
@@ -11,7 +11,7 @@ Given input array nums = [3,2,2,3], val = 3**
 
 **Your function should return length = 2, with the first two elements of nums being 2.**
 
-# Round 1 - self
+## Round 1 - self
 ```java
 public class Solution {
     public int removeElement(int[] nums, int val) {
@@ -27,4 +27,4 @@ public class Solution {
 }
 ```
 
-# Round 2 - New Silicon Valley
+## Round 2 - New Silicon Valley
