--- a/027.Remove Element.md
+++ b/027.Remove Element.md
@@ -28,3 +28,20 @@ public class Solution {
 ```
 
 ## Round 2 - New Silicon Valley
+
+数学归纳法 - general case & base case
+
+```java
+class Solution {
+    public int removeElement(int[] nums, int val) {
+        int len = 0;
+        
+        for (int i = 0; i < nums.length; i ++) {
+            if (nums[i] != val)
+                nums[len ++] = nums[i];
+        }        
+        
+        return len;
+    }
+}
+```
