--- a/026.Remove Duplicates from Sorted Array.md
+++ b/026.Remove Duplicates from Sorted Array.md
@@ -9,7 +9,7 @@
 
 **Your function should return length = 2, with the first two elements of nums being 1 and 2 respectively. It doesn't matter what you leave beyond the new length.**
 
-
+## Round 1 - self
 
 ```java
 public class Solution {
@@ -23,3 +23,5 @@ public class Solution {
     }
 }
 ```
+
+## Round 2 - New Silicon Valley
