Update 026.Remove Duplicates from Sorted Array.md

--- a/026.Remove Duplicates from Sorted Array.md
+++ b/026.Remove Duplicates from Sorted Array.md
@@ -25,3 +25,21 @@ public class Solution {
 ```
 
 ## Round 2 - New Silicon Valley
+
+数学归纳法 - general case & base case(len = 1) 不能合并
+
+```java
+class Solution {
+    public int removeDuplicates(int[] nums) {
+        if (nums.length <= 1) return nums.length;
+
+        int len = 1; // because the first one cannot be duplicated
+        for (int i = 1; i < nums.length; i ++) {
+            if (nums[i] != nums[i - 1]) 
+                nums[len ++] = nums[i];
+        }
+
+        return len;
+    }
+}
+```
