--- a/080.Remove Duplicates from Sorted Array II.md
+++ b/080.Remove Duplicates from Sorted Array II.md
@@ -8,7 +8,9 @@ Given sorted array nums = [1,1,1,2,2,3],**
 
 **Your function should return length = 5, with the first five elements of nums being 1, 1, 2, 2 and 3. It doesn't matter what you leave beyond the new length.**
 
-## 
+## Round  1 - New Silicon Valley
+
+数学归纳法 - general case & base case(len = 2) 不能合并
 
 ```java
 class Solution {
