Update 239.Sliding Window Maximum.md

--- a/239.Sliding Window Maximum.md
+++ b/239.Sliding Window Maximum.md
@@ -15,7 +15,9 @@ You may assume k is always valid, ie: 1 ≤ k ≤ input array's size for non-emp
 **Follow up:
 Could you solve it in linear time?**
 
-Solution 1 - TreeMap
+## Round 1 - New Silicon Valley
+Solution 1 - TreeMap (bst)
+- rocky
 ```java
 class Solution {
     public int[] maxSlidingWindow(int[] nums, int k) {
@@ -39,6 +41,34 @@ class Solution {
             }
         }
         return ans;
+    }
+}
+```
+- myself
+```java
+class Solution {
+    public int[] maxSlidingWindow(int[] nums, int k) {
+        if (nums.length <= 0 || k <= 0) return nums;
+        
+        int[] ans = new int[nums.length - k + 1];
+        TreeMap<Integer, Integer> bst = new TreeMap<>((o1, o2) -> o1 - o2);
+        
+        for (int i = 0; i < nums.length; i ++) {
+            //1, put the nums[i] to bst, save the frequency of nums[i]; cannot save the index i because the value of nums[i] maybe duplicated and the Key of TreeMap cannot be same.
+            if (!bst.containsKey(nums[i]))
+                bst.put(nums[i], 1);
+            else bst.put(nums[i], bst.get(nums[i]) + 1);
+            //2, remove the overflow element nums[i - k]; if the bst.get(nums[i - k]) >= 2, mean the nums[i - k] has duplicate in bst, so cannot remove all the Key nums[i - k], shoule - 1;
+            if (i - k >= 0) {
+                if (bst.get(nums[i - k]) >= 2) bst.put(nums[i - k], bst.get(nums[i - k]) - 1);
+                else bst.remove(nums[i - k]);
+            }
+            //3, add the maximun value of window to ans
+            if (i - k + 1 >= 0)
+                ans[i - k + 1] = bst.lastKey();
+        }
+        
+        return ans;       
     }
 }
 ```
