--- a/001.TwoSum.md
+++ b/001.TwoSum.md
@@ -10,6 +10,7 @@ Given nums = [2, 7, 11, 15], target = 9,
 Because nums[0] + nums[1] = 2 + 7 = 9,
 return [0, 1].
 
+## Round 1 - CityU
 ```java
 public class Solution {
     public int[] twoSum(int[] nums, int target) {
@@ -22,6 +23,26 @@ public class Solution {
             }
             map.put(nums[i],i);
         }
+        return ans;
+    }
+}
+```
+
+## Round 2 - New Silicon Valley
+```java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        int[] ans = new int[2];
+        HashMap<Integer, Integer> array = new HashMap<>();
+        
+        for (int i = 0; i < nums.length; i ++) {
+            if (array.containsKey(target - nums[i])) {
+                ans[0] = array.get(target - nums[i]);
+                ans[1] = i;
+            }
+            else array.put(nums[i], i);
+        }
+        
         return ans;
     }
 }
