Update 239.Sliding Window Maximum.md

--- a/239.Sliding Window Maximum.md
+++ b/239.Sliding Window Maximum.md
@@ -25,8 +25,8 @@ class Solution {
         if (len <= 0 || k <= 0) return new int[]{};
         
         int[] ans = new int[len - k + 1];
-        TreeMap<Integer, Integer> bst = new TreeMap<>((o1, o2) -> o1 - o2);
-        
+        TreeMap<Integer, Integer> bst = new TreeMap<>((o1, o2) -> o1 - o2); // o1 - o2 is ascending order, so should get lastKey() at end, but o2 - o1 is deceding order, should get firstKey() in the end;
+        
         for (int i = 0; i < len; i ++) {
             if (bst.containsKey(nums[i]))
                 bst.put(nums[i], bst.get(nums[i]) + 1);
