Update 239.Sliding Window Maximum.md

--- a/239.Sliding Window Maximum.md
+++ b/239.Sliding Window Maximum.md
@@ -102,3 +102,32 @@ class Solution {
     }
 }
 ```
+
+-self
+```java
+class Solution {
+    public int[] maxSlidingWindow(int[] nums, int k) {
+        int len = nums.length;
+        if (len <= 0 || k <= 0) return nums;
+        
+        int[] ans = new int[len - k + 1];
+        Deque<Integer> _deque = new LinkedList<>();
+        
+        for (int i = 0; i < len; i ++) {
+            //1, store the nums[i] if it is valid
+            while (!_deque.isEmpty() && nums[_deque.getLast()] <= nums[i]) //must to determine the deque is empty or not, otherwise the get function cannot be used
+                _deque.removeLast();
+            _deque.add(i); //store the index of nums, not the value of nums, because we need to determine the nums[i] is overflow the window or not..
+            
+            //2, remove the overflow nums[i - k]
+            if (_deque.getFirst() <= i - k)
+                _deque.removeFirst();
+            
+            //3, store the ans
+            if (i - k + 1 >= 0)
+                ans[i - k + 1] = nums[_deque.getFirst()];
+        }
+        return ans;
+    } 
+}
+```
