--- a/146.LRU Cache.md
+++ b/146.LRU Cache.md
@@ -1,4 +1,4 @@
-# leetcode
+# LRU Cache (Hard)
 
 **Design and implement a data structure for Least Recently Used (LRU) cache. It should support the following operations: get and put.**
 
