--- a/038.Count and Say.md
+++ b/038.Count and Say.md
@@ -36,6 +36,7 @@
 
 ## Round 1 - New Silicon Valley
 
+Solution 1 - Mathematical Induction
 ```java
 class Solution {
     public String countAndSay(int n) {
@@ -60,6 +61,34 @@ class Solution {
             cur = ans.toString();
         }
         return cur;
+    }
+}
+```
+
+Solution 2 - Examples_self
+```java
+class Solution {
+    public String countAndSay(int n) {
+        String cur = "1";
+        
+        for (int i = 2; i <= n; i ++) {
+            StringBuilder ans = new StringBuilder();
+            int start = 0;
+            for (int j = 1; j < cur.length(); j ++) {
+                if (cur.charAt(j) != cur.charAt(j - 1)) {
+                    group(ans, start, j - 1, cur.charAt(j - 1));
+                    start = j;
+                }
+            }
+            group(ans, start, cur.length() - 1, cur.charAt(cur.length() - 1));
+            cur = ans.toString();
+        }
+        return cur;
+    }
+    
+    private void group(StringBuilder ans, int start, int end, char num) {
+            int count = end - start + 1;
+            ans.append(count + "" + num);
     }
 }
 ```
