--- a/078.Subsets.md
+++ b/078.Subsets.md
@@ -7,7 +7,7 @@
 **For example:
 If nums = [1,2,3], a solution is:**
 
-https://raw.githubusercontent.com/zaa9205/images/master/078.Substes.png
+![Alt Text](https://raw.githubusercontent.com/zaa9205/images/master/078.Substes.png)
 
 ## Round 1 - New Silicon Valley
 
