Update 191.Number of 1 Bits.md

--- a/191.Number of 1 Bits.md
+++ b/191.Number of 1 Bits.md
@@ -6,6 +6,8 @@
 
 Related to 190.Reverse Bits
 
+## Round 1 - Self
+
 Solution 1 - find every bit in binary n
 
 ```java
@@ -28,6 +30,20 @@ public class Solution {
     // you need to treat n as an unsigned value
     public int hammingWeight(int n) {
         return Integer.bitCount(n);
+    }
+}
+```
+## Round 2 - New Silicon Valley
+```java
+public class Solution {
+    // you need to treat n as an unsigned value
+    public int hammingWeight(int n) {
+        int res = 0;
+        while (n != 0) {
+            res += (n & 1);
+            n >>>= 1;
+        }
+        return res;
     }
 }
 ```
