Update 172.Factorial Trailing Zeroes.md

--- a/172.Factorial Trailing Zeroes.md
+++ b/172.Factorial Trailing Zeroes.md
@@ -6,6 +6,7 @@
 
 ## Round 1 - New Silicon Valley
 
+Solution 1 - iteration
 ```java
 class Solution {
     public int trailingZeroes(int n) {
@@ -15,6 +16,18 @@ class Solution {
             n /= 5;
         }
         return res;
+    }
+}
+```
+
+Solution 2 - recursion
+```java
+class Solution {
+    public int trailingZeroes(int n) {
+        if (n == 0) {
+            return 0;
+        }
+        return n / 5 + trailingZeroes(n / 5);
     }
 }
 ```
