Update 011.Container With Most Water.md

--- a/011.Container With Most Water.md
+++ b/011.Container With Most Water.md
@@ -31,3 +31,26 @@ class Solution {
     }
 }
 ```
+
+Solution 2 - recursion
+```java
+class Solution {
+    public int maxArea(int[] height) {
+        return helper(height, 0, height.length - 1);
+    }
+    
+    private int helper(int[] height, int start, int end) {
+        if (start >= end) {
+            return 0;
+        }
+        
+        if (height[start] < height[end]) {
+            return Math.max(height[start] * (end - start), helper(height, start + 1, end));
+        } else if (height[start] > height[end]) {
+            return Math.max(height[end] * (end - start), helper(height, start, end - 1));
+        } else {
+            return Math.max(height[start] * (end - start), helper(height, start + 1, end - 1));
+        }
+    }
+}
+```
