Update 191.Number of 1 Bits.md

--- a/191.Number of 1 Bits.md
+++ b/191.Number of 1 Bits.md
@@ -33,6 +33,8 @@ public class Solution {
     }
 }
 ```
+![Alt Text](https://raw.githubusercontent.com/zaa9205/images/master/191.%20Number%20of%201%20Bits.png)
+
 ## Round 2 - New Silicon Valley
 ```java
 public class Solution {
