Update 172.Factorial Trailing Zeroes.md

--- a/172.Factorial Trailing Zeroes.md
+++ b/172.Factorial Trailing Zeroes.md
@@ -4,6 +4,8 @@
 
 **Note: Your solution should be in logarithmic time complexity.**
 
+![Alt Text](https://raw.githubusercontent.com/zaa9205/images/master/172.%20Factorial%20Trailing%20Zeroes.png)
+
 ## Round 1 - New Silicon Valley
 
 Solution 1 - iteration
