--- a/172.Factorial Trailing Zeroes.md
+++ b/172.Factorial Trailing Zeroes.md
@@ -1,4 +1,4 @@
-# Factorial Trailing Zeroes
+# 172.Factorial Trailing Zeroes
 
 **Given an integer n, return the number of trailing zeroes in n!.**
 
