Update 011.Container With Most Water.md

--- a/011.Container With Most Water.md
+++ b/011.Container With Most Water.md
@@ -4,7 +4,9 @@
 
 **Note: You may not slant the container and n is at least 2.**
 
-## Round 1 - New Silicon Valley
+![Alt Text](https://raw.githubusercontent.com/zaa9205/images/master/011.%20Container%20With%20Most%20Water.png)
+
+## Round 1
 
 Solution 1 - iteration
 ```java
