--- a/330.Patching Array.md
+++ b/330.Patching Array.md
@@ -30,7 +30,9 @@
 
 **Return 0.**
 
-## Round 1 - New Silicon Valley
+![Alt Text](https://raw.githubusercontent.com/zaa9205/images/master/330.Patching%20Array.png)
+
+## Round 1
 
 ```java
 class Solution {
